[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "fantasy-unified"
version = "0.1.0"
description = "Unified Pydantic data models and fetcher interface for fantasy football platforms (Sleeper, Yahoo, ESPN, etc.)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["fantasy", "football", "pydantic", "unified", "models"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed"
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "typing-extensions>=4.8",
  "sleeper-api-wrapper>=3.0.0"
]

[project.urls]
Homepage = "https://example.com/fantasy-unified"
Repository = "https://example.com/fantasy-unified"

[tool.hatch.build.targets.wheel]
packages = ["src/fantasy_unified"]

